--- a/AppFinal1/templates/AppFinal1/editarRidersInfo.html
+++ b/AppFinal1/templates/AppFinal1/editarRidersInfo.html
@@ -8,10 +8,10 @@
 </head>
 <body>
 
-    <form action="" enctype="multipart/form-data" method="POST"> {% csrf_token %}
+    <form action="" method="POST"> {% csrf_token %}
 
         <table>
-            {{form3.as_table}}
+            {{form1.as_table}}
         </table>
 
         <input type="submit" value="Confirmar">
