--- a/AppFinal1/templates/AppFinal1/results.html
+++ b/AppFinal1/templates/AppFinal1/results.html
@@ -10,9 +10,9 @@
     
     <p>Estamos buscando el evento: {{racingevent}}</p>
 
-    {% for racingevent in name %}
+    {% for k in events %}
 
-        <p>Evento: {{racingevent.name}} ---- Nivel: {{racingevent.racelevel</p>
+        <p>Evento: {{k.racingevent}} ---- Nivel: {{k.racelevel}}</p>
 
 
     {% endfor %}
