--- a/AppFinal1/templates/AppFinal1/searchEvent.html
+++ b/AppFinal1/templates/AppFinal1/searchEvent.html
@@ -10,7 +10,7 @@
     
     <form action="/AppFinal1/results/" method="GET">
 
-        <input type="text" name="racingevent" id="racingevent">
+        <input type="text" name="name" id="name">
 
         <input type="submit" value="Buscar">
 
