--- a/AppFinal1/templates/AppFinal1/padre.html
+++ b/AppFinal1/templates/AppFinal1/padre.html
@@ -21,8 +21,24 @@
         <nav class="navbar navbar-light bg-light static-top">
             <div class="container">
                 <a class="navbar-brand" href="{% url 'Home' %}">Home</a>
-                <a class="navbar-brand" href="{% url 'Races' %}">Races</a>
-                <a class="btn btn-primary" href="#signup">Sign Up</a>
+                <a class="navbar-brand" href="{% url 'About' %}">About</a>
+                <a class="navbar-brand" href="{% url 'LeerRacesInfo' %}">Races</a>
+                <a class="navbar-brand" href="{% url 'LeerRidersInfo' %}">Riders</a>
+
+                {% if request.user.is_authenticated %}
+                <a class="btn btn-primary" href="{% url 'EditarUser' %}">Edit Profile</a>
+                <a class="btn btn-primary" href="{% url 'Logout' %}">Logout</a>
+                <p>{{user.username}}</p>
+                {% with user.avatar_set.first as miAvatar %}
+                {% if miAvatar %}
+                <img src="{{miAvatar.imagen.url}}" alt="No encontro imagen" style="max-width: 50px ;">
+                {% endif %}
+                {% endwith %}
+
+                {% else %}
+                <a class="btn btn-primary" href="{% url 'SignUp' %}">Sign Up</a>
+                <a class="btn btn-primary" href="{% url 'Login' %}">Login</a>
+                {% endif %}
             </div>
         </nav>
         <!-- Masthead-->
