--- a/AppFinal1/templates/AppFinal1/resultsRiders.html
+++ b/AppFinal1/templates/AppFinal1/resultsRiders.html
@@ -7,18 +7,13 @@
     <title>Document</title>
 </head>
 <body>
-
-    <form action="" enctype="multipart/form-data" method="POST"> {% csrf_token %}
-
-        <table>
-            {{form3.as_table}}
-        </table>
-
-        <input type="submit" value="Confirmar">
-
     
-    </form>
+    <p> Estamos buscando al rider: {{name}}</p>
 
+    {% for rider in riders %}
+        <p> Fecha nacimiento: {{rider.dateofbirth}}</p>
+        <p> Email: {{rider.email}} </p>
+    {% endfor %}
 
 </body>
 </html>
